tests/sumo/output/vtypeprobe/errors/file_false/errors.sumo
Warning: VTypeProbes are deprecated. Use fcd-output devices (assigned to the vType) instead.
Error: Could not build output file 'xxx/vtypeprobe.xml' (No such file or directory).
Quitting (on error).
